force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/cgcloud__Rate_Based_Funding__c.object-meta.xml
<CustomObject>
    <description>This Object holds general information along with metadata associated with the RBF Template from which it was created</description>
    <label>Rate-based Funding</label>
    <nameField>
        <displayFormat>RBF-{0}</displayFormat>
        <label>Rate-based Funding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate-based Fundings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>