force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__Currency__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Currency__c</fullName>
    <formula>cgcloud__Rate_Based_Funding_Template__r.cgcloud__Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>