force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__Date_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date_From__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>