force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date_Thru__c</fullName>
    <label>Date Thru</label>
    <required>true</required>
    <type>Date</type>
</CustomField>