force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description__c</fullName>
    <label>Description</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>