force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__External_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__External_Id__c</fullName>
    <description>Unique identifier for external system RBF record</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>