force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__Fund_Anchor__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Anchor__c</fullName>
    <label>Fund Anchor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning_Level</fullName>
            </value>
            <value>
                <fullName>RBF_Anchor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>