force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__Fund_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund Template</label>
    <referenceTo>cgcloud__Fund_Template__c</referenceTo>
    <relationshipLabel>Rate-based Fundings (Fund Template)</relationshipLabel>
    <relationshipName>Rate_based_Fundings1</relationshipName>
    <type>Lookup</type>
</CustomField>