force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__Fund_Template_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Template_Type__c</fullName>
    <formula>cgcloud__Fund_Template__r.cgcloud__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Type</label>
    <type>Text</type>
</CustomField>