force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__KPI_Subset__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Subset__c</fullName>
    <description>This subset will allow for filtering KPI Definitions in the GridHierarchyView component. If you do not choose one, no subset filter will be applied.</description>
    <formula>TEXT(cgcloud__Rate_Based_Funding_Template__r.cgcloud__KPI_Subset__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Subset</label>
    <type>Text</type>
</CustomField>