force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manual_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purpose of this field is to control when a Child can be updated by the parent in the RBF Distribution process</description>
    <label>Manual Override</label>
    <type>Checkbox</type>
</CustomField>