force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__Original_Reference__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Original_Reference__c</fullName>
    <description>Reference to the parent RBF record.</description>
    <inlineHelpText>Reference to the parent RBF record.</inlineHelpText>
    <label>Original Reference</label>
    <length>256</length>
    <type>Html</type>
</CustomField>