force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__Parent_RBF__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_RBF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contains the reference of the parent in RBF Distribution process</description>
    <label>Parent RBF</label>
    <referenceTo>cgcloud__Rate_Based_Funding__c</referenceTo>
    <relationshipLabel>Rate-based Fundings</relationshipLabel>
    <relationshipName>Rate_based_Fundings</relationshipName>
    <type>Lookup</type>
</CustomField>