force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__Rate_Based_Funding_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Rate_Based_Funding_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Based Funding Template</label>
    <referenceTo>cgcloud__RBF_Template__c</referenceTo>
    <relationshipLabel>Rate-based Fundings</relationshipLabel>
    <relationshipName>Rate_based_Fundings</relationshipName>
    <type>Lookup</type>
</CustomField>