force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__RBF_Anchor_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__RBF_Anchor_Type__c</fullName>
    <formula>TEXT(cgcloud__Rate_Based_Funding_Template__r.cgcloud__Anchor_Type__c)</formula>
    <label>Anchor Type</label>
    <type>Text</type>
</CustomField>