force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__RBF_KPI_Set__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__RBF_KPI_Set__c</fullName>
    <formula>cgcloud__Rate_Based_Funding_Template__r.cgcloud__KPI_Set__r.Name</formula>
    <label>KPI Set</label>
    <type>Text</type>
</CustomField>