force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__RBF_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__RBF_Rate_Type__c</fullName>
    <formula>TEXT( cgcloud__Rate_Based_Funding_Template__r.cgcloud__Rate_Type__c )</formula>
    <label>Rate Type</label>
    <type>Text</type>
</CustomField>