force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__RBF_Total_KPI__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__RBF_Total_KPI__c</fullName>
    <formula>cgcloud__Rate_Based_Funding_Template__r.cgcloud__RBF_Total_KPI__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RBF Total KPI</label>
    <type>Text</type>
</CustomField>