force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__Stop_Transacting_Unlock__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Stop_Transacting_Unlock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to signal that the record can be safely unlocked as part of the stop transacting process.</description>
    <label>Stop Transacting Unlock</label>
    <type>Checkbox</type>
</CustomField>