force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/fields/cgcloud__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Amount__c</fullName>
    <description>Total calculated as derived from interaction with the RBF Grid (aggregate of all RBF-Product calculated values).</description>
    <label>Total Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>