force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/validationRules/cgcloud__Timeframe_must_not_exceed_18_months.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Timeframe_must_not_exceed_18_months</fullName>
    <active>true</active>
    <description>The overall selected timeframe must not exceed 18 months</description>
    <errorConditionFormula>AND(
  $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
   cgcloud__Date_Thru__c  &gt; (ADDMONTHS(cgcloud__Date_From__c, 18))
)</errorConditionFormula>
    <errorMessage>The overall selected timeframe must not exceed 18 months.</errorMessage>
</ValidationRule>