force-app/main/default/objects/cgcloud__Rate_Based_Funding__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__RBF_Rate_Type__c</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Account__c</columns>
    <columns>cgcloud__Date_From__c</columns>
    <columns>cgcloud__Date_Thru__c</columns>
    <columns>cgcloud__Total_Amount__c</columns>
    <columns>cgcloud__Fund_Template_Type__c</columns>
    <columns>cgcloud__Status__c</columns>
    <columns>cgcloud__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>